<resources>
    <string name="app_name">Party Planner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="msg_load_default">Loading...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_prescription">Book a Vendor</string>
    <string name="call_us">Call us - 95-8008-9009</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="about">About Us</string>
    <string name="notification">Notification</string>
    <string name="my_order">My Order</string>
    <string name="confirm">Confirmed</string>
    <string name="accepted">Dispatched</string>
    <string name="deliver">Delivered</string>
    <string name="cancel">Canceled</string>
    <string name="offer">Offers</string>
    <string name="reorder">Reorder</string>
    <string name="track_order">Track order</string>
    <string name="runtime_permissions_txt">Please allow permission to use this app</string>
    <string-array name="delivery">
        <item>Party &amp; Events</item>
        <item>Friday</item>
        <item>Sunday</item>
    </string-array>
    <string name="error_bad_request">Bad Request</string>
    <string name="error_internal_server_error">Internal server error</string>
    <string name="error_url_not_found">URL not found</string>
    <string name="error_unautorize_access">UnAuthorize access</string>
    <string name="error_connection_timed_out">Connection timed out!</string>
    <string name="edittext_email_error_activity_login">Please enter a valid email address!</string>
    <string name="edittext_password_error_activity_login">Please enter password</string>
    <string name="no_internet_connection_warning_server_error">No internet connection available</string>
    <string name="toolbar_title_customer_list">Customer List</string>
    <string name="toolbar_title_vendor_list">Vendor List</string>
    <string name="please_wait">Please wait...</string>
    <string name="invalid_f_name">Please enter a valid First Name</string>
    <string name="invalid_l_name">Please enter a valid Last Name</string>
    <string name="dateerror">Please enter Date of Birth</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_phone">Mobile number is mandatory</string>
    <string name="information">Information</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="register_as_customer">Register as customer</string>
    <string name="register_as_vendor">Register as vendor</string>
    <string name="toolbar_title_cat_creation">Category Creation</string>
    <string name="toolbar_title_sub_cat_creation">Sub Category Creation</string>
    <string name="toolbar_title_sub_cat_list">Sub Category List</string>
    <string name="toolbar_title_cat_list">Category List</string>
    <string name="toolbar_title_forgot_password">Forgot Password</string>
    <string name="otp_header_text">Otp verification</string>
    <string name="txt_email">Email</string>
    <string name="pipeText">|</string>
    <string name="hint_enter_email_otp">Enter OTP</string>
    <string name="bt_verify_otp_text">Verify OTP</string>
    <string name="enter_otp_error">Please Enter Otp</string>
    <string name="new_password_text">New Password</string>
    <string name="cnf_password_text">Confirm Password</string>
    <string name="toolbar_title_change_password">Change Password</string>

</resources>
