<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/background_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/dim_12">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/otp_header_text"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/universal_text_size18" />

        <ImageView
            android:id="@+id/ImvClose"
            android:layout_width="@dimen/dim_30"
            android:layout_height="@dimen/dim_30"
            android:layout_alignParentRight="true"
            android:layout_gravity="top"
            android:gravity="top"
            android:padding="@dimen/dim_2"
            android:tint="@color/colorWhite"
            app:srcCompat="@drawable/ic_action_cancel" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dim_8">

        <TextView
            android:id="@+id/tvMobileNumHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/txt_email"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/universal_text_size16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dim_4"
            android:text="@string/pipeText"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/universal_text_size16" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/dim_4"
            android:text="9555517491"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/universal_text_size16" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_24"
        android:layout_marginTop="@dimen/dim_8"
        android:layout_marginRight="@dimen/dim_24"
        android:layout_marginBottom="@dimen/dim_8"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/ivTick"
            android:background="@drawable/et_border"
            android:hint="@string/hint_enter_email_otp"
            android:inputType="text"
            android:padding="@dimen/dim_8"
            android:paddingLeft="@dimen/dim_10"
            android:paddingRight="@dimen/dim_10"
            android:textColor="@color/text_msg_input"
            android:textColorHint="@color/text_msg_input"
            android:textSize="@dimen/universal_text_size14"
            android:visibility="visible" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/dim_8"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnVerify"
            android:layout_width="@dimen/dim_200"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/dim_8"
            android:backgroundTint="@color/colorPrimary"
            android:padding="@dimen/dim_12"
            android:text="@string/bt_verify_otp_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:theme="@style/toolbarRipple" />

    </RelativeLayout>


</LinearLayout>