<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/info_white"/>

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/dim_10"
            android:textSize="@dimen/text_size_15sp"
            android:drawablePadding="@dimen/dim_10"
            android:textColor="@color/white"
            android:text="@string/information" />


    </LinearLayout>
    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:padding="@dimen/dim_10"
        android:layout_margin="@dimen/dim_10"
        android:textSize="@dimen/text_size_15sp" />
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvMessageOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok_button"
            android:layout_marginTop="@dimen/dim_10"
            android:layout_marginBottom="@dimen/dim_10"
            android:layout_marginLeft="@dimen/dim_7"
            android:layout_marginRight="@dimen/dim_10"
            android:paddingLeft="@dimen/dim_20"
            android:paddingRight="@dimen/dim_20"
            android:paddingTop="@dimen/dim_5"
            android:paddingBottom="@dimen/dim_5"
            android:textColor="@color/white"
            android:background="@drawable/button_drawable"
            android:textSize="@dimen/text_size_15sp" />
        <TextView
            android:id="@+id/tvMessageNO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no"
            android:layout_marginTop="@dimen/dim_10"
            android:layout_marginBottom="@dimen/dim_10"
            android:layout_marginLeft="@dimen/dim_7"
            android:layout_marginRight="@dimen/dim_10"
            android:paddingLeft="@dimen/dim_20"
            android:paddingRight="@dimen/dim_15"
            android:paddingTop="@dimen/dim_5"
            android:paddingBottom="@dimen/dim_5"
            android:textColor="@color/white"
            android:background="@drawable/button_drawable"
            android:textSize="@dimen/text_size_15sp" />
        <TextView
            android:id="@+id/tvMessageCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel_button"
            android:layout_marginTop="@dimen/dim_10"
            android:layout_marginBottom="@dimen/dim_10"
            android:layout_marginLeft="@dimen/dim_7"
            android:layout_marginRight="@dimen/dim_10"
            android:paddingLeft="@dimen/dim_20"
            android:paddingRight="@dimen/dim_15"
            android:paddingTop="@dimen/dim_5"
            android:paddingBottom="@dimen/dim_5"
            android:textColor="@color/white"
            android:background="@drawable/button_drawable"
            android:textSize="@dimen/text_size_15sp" />
    </LinearLayout>
</LinearLayout>