<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/info_white" />

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/dim_10"
            android:gravity="center"
            android:padding="@dimen/dim_10"
            android:text="@string/information"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_15sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/dim_10"
        android:gravity="center"
        android:padding="@dimen/dim_10"
        android:textSize="@dimen/text_size_15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_8"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvYes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/yes"
                android:layout_marginTop="@dimen/dim_10"
                android:layout_marginBottom="@dimen/dim_10"
                android:layout_marginLeft="@dimen/dim_7"
                android:layout_marginRight="@dimen/dim_10"
                android:paddingLeft="@dimen/dim_20"
                android:paddingRight="@dimen/dim_15"
                android:paddingTop="@dimen/dim_5"
                android:paddingBottom="@dimen/dim_5"
                android:textColor="@color/white"
                android:background="@drawable/button_drawable"
                android:textSize="@dimen/text_size_15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/dim_7"
                android:layout_marginTop="@dimen/dim_10"
                android:layout_marginRight="@dimen/dim_10"
                android:layout_marginBottom="@dimen/dim_10"
                android:layout_weight="1"
                android:background="@drawable/button_drawable"
                android:gravity="center"
                android:paddingLeft="@dimen/dim_20"
                android:paddingTop="@dimen/dim_5"
                android:paddingRight="@dimen/dim_20"
                android:paddingBottom="@dimen/dim_5"
                android:text="@string/no"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_15sp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>