<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/app_background_color">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            app:layout_collapseMode="parallax"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/toolbarTtile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:text="History"
                android:visibility="visible" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/imgOrderTracking"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="4dp"
                            android:layout_marginStart="4dp"
                            android:gravity="center"
                            android:src="@drawable/my_order" />

                        <TextView
                            android:id="@+id/tvStoreName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/imgOrderTracking"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="16dp"
                            android:gravity="center"
                            android:text="My History"

                            android:textColor="@color/colorPrimary" />




                    </RelativeLayout>

                    <include layout="@layout/view_layout_without_dot"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:id="@+id/llConfirmed"
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:gravity="center|center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvNew"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/black" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/confirm"
                                android:textSize="12dp"
                                android:textColor="@color/filter_text_color" />

                            <View
                                android:id="@+id/vConfirmed"
                                android:layout_width="wrap_content"
                                android:layout_height="2dp"
                                android:layout_marginTop="10dp"
                                android:paddingBottom="5dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="@color/colorPrimary"/>

                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/llDispatched"
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:gravity="center|center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvAccepted"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/black" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/accepted"
                                android:textSize="12dp"
                                android:textColor="@color/filter_text_color" />

                            <View
                                android:id="@+id/vDispatched"
                                android:layout_width="wrap_content"
                                android:layout_height="2dp"
                                android:layout_marginTop="10dp"
                                android:paddingBottom="5dp"
                                android:layout_marginLeft="10dp"
                                android:visibility="gone"
                                android:layout_marginRight="10dp"
                                android:background="@color/colorPrimary"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llDelivered"
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:gravity="center|center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvDispatched"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/black" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:textSize="12dp"
                                android:text="@string/deliver"
                                android:textColor="@color/filter_text_color" />

                            <View
                                android:id="@+id/vDelivered"
                                android:layout_width="wrap_content"
                                android:layout_height="2dp"
                                android:layout_marginTop="10dp"
                                android:paddingBottom="5dp"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp"
                                android:visibility="gone"
                                android:background="@color/colorPrimary"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llCanceled"
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:gravity="center|center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvDelivered"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/black" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/cancel"
                                android:textColor="@color/filter_text_color"
                                android:textSize="12dp" />

                            <View
                                android:id="@+id/vCanceled"
                                android:layout_width="wrap_content"
                                android:layout_height="2dp"
                                android:visibility="gone"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginTop="10dp"
                                android:background="@color/colorPrimary"
                                android:paddingBottom="5dp" />

                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:background="@color/white">


                </android.support.v7.widget.RecyclerView>






            </LinearLayout>




    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>